Kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fastapi-deny-all
spec:
  podSelector:
    matchLabels:
      app: fastapi
  policyTypes:
  - Ingress
  - Egress
